# engine_project

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  test.txt
include/: _Test.h
include/Components/: Transform.h
include/Core/: Application.h  Defs.h  Node.h  NodeManager.h  Profiler.h  Reference.h  Scene.h  Script.h  ScriptRegistry.h  TransformData.h  Util.h
include/Graphics/: Camera.h  Context.h  Font.h  Framebuffer.h  GraphicsRenderer.h  Light.h  Material.h  Mesh.h  Model.h  Renderable.h  Shader.h  Skybox.h  SortMode.h  Texture.h  Uniform.h
include/Input/: Input.h
include/UI/: UIButton.h  UICanvas.h  UIDropdown.h  UIElement.h  UIField.h  UILabel.h  UIWindow.h
include/Xml/: XmlParser.h
lib/glad/: README.md  glad.c  glad.h
res/: try_me.xml
res/shaders/: cubemap.frag.glsl  cubemap.vert.glsl  deferred.frag.glsl  deferred.vert.glsl  depth.frag.glsl  depth.vert.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  screen.frag.glsl  screen.vert.glsl  shaded.frag.glsl  shaded.vert.glsl  ssao.frag.glsl  ssao.vert.glsl  textured.frag.glsl  textured.vert.glsl  ui.frag.glsl  ui.vert.glsl  world_line.frag.glsl  world_line.vert.glsl
shaders/: cubemap.frag.glsl  cubemap.vert.glsl  deferred.frag.glsl  deferred.vert.glsl  depth.vert.glsl  gbuffer.frag.glsl  gbuffer.vert.glsl  screen.frag.glsl  screen.vert.glsl  shaded.frag.glsl  shaded.vert.glsl  ssao.frag.glsl  ssao.vert.glsl  textured.frag.glsl  textured.vert.glsl  ui.frag.glsl  ui.vert.glsl  world_line.vert.glsl
source/: _Test.cpp  _Todo.txt  main.cpp  main_2.cpp
source/Components/: Transform.cpp
source/Core/: Application.cpp  NodeManager.cpp  Profiler.cpp  Reference.cpp  Scene.cpp  Util.cpp
source/Graphics/: Camera.cpp  (+12 more)
(+10 files in other folders)
